# Genesis-Replicator-Framework

./: IMPLEMENTATION_PLAN.md  README.md  alembic.ini  pyproject.toml  requirements.txt
docs/ai/: model_integration.md
docs/api/: async_operations.md  backup_recovery.md  monitoring.md  performance.md  plugin_system.md  scalability.md
docs/blockchain/: bnb_chain_integration.md
docs/deployment/: deployment_guide.md  deployment_procedures.md
docs/guides/: async_operations_guide.md  configuration_guide.md  configuration_procedures.md
docs/security/: security_guide.md  security_procedures.md
genesis_replicator/: main.py
genesis_replicator/agent_core/: agent_communicator.py  lifecycle_manager.py  memory_manager.py  resource_monitor.py
genesis_replicator/ai_module/: fallback_manager.py  model_evaluator.py  model_registry.py  prediction_optimizer.py  rate_limiter.py  training_manager.py
genesis_replicator/backup_recovery/: __init__.py  backup_manager.py  recovery_manager.py  state_persistence.py
genesis_replicator/blockchain/: __init__.py  cross_chain_manager.py
genesis_replicator/caching/: __init__.py  cache_manager.py
genesis_replicator/config/: default_config.json
genesis_replicator/decision_engine/: history_analyzer.py  priority_manager.py  rule_engine.py  strategy_manager.py
genesis_replicator/deployment/: __init__.py  orchestrator.py
genesis_replicator/event_processing/: README.md  __init__.py  circuit_breaker.py  event_batcher.py
genesis_replicator/foundation_services/: exceptions.py
genesis_replicator/monitoring/: __init__.py  alert_manager.py  health_checker.py  metrics_collector.py  monitoring_config.py
genesis_replicator/performance/: __init__.py  event_optimizer.py  memory_manager.py  resource_optimizer.py
genesis_replicator/plugin_system/: __init__.py  plugin_interface.py  plugin_lifecycle.py  plugin_manager.py  plugin_security.py
genesis_replicator/scalability/: __init__.py  cluster_manager.py  load_balancer.py  resource_optimizer.py  state_manager.py
genesis_replicator/security/: __init__.py  auth_manager.py  contract_security.py  crypto_utils.py
migrations/: env.py
(+112 files in other folders)
