[tool.poetry]
name = "genesis-replicator"
version = "0.1.0"
description = "A modular framework for developing autonomous AI agents in Web3 environments"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.2"
aiohttp = "^3.9.1"
web3 = "^6.11.3"
python-dotenv = "^1.0.0"
psutil = "^5.9.8"
uvicorn = "^0.27.1"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.2.0"
pytest-xdist = "^3.5.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 300
