[tool.poetry]
name = "genesis-replicator"
version = "0.1.0"
description = "A comprehensive framework for developing autonomous AI agents in Web3 environments"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
alembic = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
